# python_deploy_tool

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  WORKFLOW.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  structures.txt  tox.ini
deploy_tool/: __init__.py  __main__.py  __version__.py  constants.py  py.typed.py
deploy_tool/api/: __init__.py  deployer.py  exceptions.py  packer.py  publisher.py  query.py
deploy_tool/cli/: __init__.py  main.py
deploy_tool/cli/commands/: __init__.py  component.py  config.py  deploy.py  doctor.py  init.py  pack.py  paths.py  publish.py  release.py
deploy_tool/cli/decorators/: __init__.py  dual_mode.py  project.py
deploy_tool/cli/utils/: __init__.py  interactive.py  output.py  progress.py
deploy_tool/core/: __init__.py  component_registry.py  config_generator.py  git_advisor.py  manifest_engine.py  path_resolver.py  project_manager.py  storage_manager.py  validation_engine.py
deploy_tool/core/compression/: __init__.py  adapters.py  tar_compressor.py  tar_processor.py  utils.py
deploy_tool/models/: __init__.py  component.py  config.py  manifest.py  project.py  release.py  result.py
deploy_tool/plugins/: __init__.py  base.py  loader.py
deploy_tool/plugins/builtin/: __init__.py  cache.py  git_integration.py  hooks.py
deploy_tool/services/: __init__.py  config_service.py  conflict_resolver.py  deploy_service.py  package_service.py  publish_service.py
deploy_tool/storage/: __init__.py  base.py  bos.py  factory.py  filesystem.py  s3.py
deploy_tool/templates/: __init__.py
deploy_tool/templates/manifests/: schema.json
deploy_tool/templates/package/: auto.yaml  default.yaml
deploy_tool/templates/project/: deploy-tool.yaml  gitignore
deploy_tool/utils/: __init__.py  async_utils.py  file_utils.py  formatting.py  git_utils.py  hash_utils.py  template_utils.py  version_utils.py
docs/design/: 发布和部署设计方案.md
