[metadata]
# This file is optional as most configuration is in pyproject.toml
# Keep for tools that still rely on setup.cfg

[bdist_wheel]
universal = 0  # This is a Python 3 only package

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .mypy_cache,
    .pytest_cache,
    .venv,
    venv

[aliases]
test = pytest

[tool:pytest]
# Pytest configuration is in pyproject.toml
# This section kept for compatibility